syntax = "proto3";
import "graph.proto";

package TCProto;

message VertexInfo {
    uint64 vertex_id = 1;
    string stop_name = 2;
};

message EdgeInfo {
    uint64 edge_id = 1;
    int32 wait_time = 2;
    string bus_name = 3;
    string departure_stop_name = 4;
    uint64 span_count = 5;
    double transit_time = 6;
};

message TransportRouter {
    GraphProto.DirectedWeightedGraph graph = 1;
    GraphProto.Router router = 2;
    repeated VertexInfo vertexes_info = 3;
    repeated EdgeInfo edges_info = 4;
};

